# zabob-memgraph

./: .dockerignore  .flake8  .gitattributes  .gitignore  .mailmap  .markdownlint.json  .markdownlint.json'  .memgraph.dic  .net-history.dic  .zabob.dic  CHANGELOG.md  COPILOT_FIXES.md  DEPLOYMENT.md  Dockerfile  Dockerfile.base-deps  Dockerfile.base-playwright  Dockerfile.base-test  Dockerfile.original  Dockerfile.runtime  Dockerfile.test  INDEX_OPTIMIZATION.md  ISSUE_create_relations_silent_failure.md  LICENSE.md  MIGRATION_V2.md  Makefile  NEXT_STEPS.md  PHASE1_STATUS.md  README-new.md  README.md  RUN_MIGRATION.md  SCHEMA_MIGRATION_STATUS.md  TODO.md  USAGE_PATTERNS.md  check_syntax.py  check_types.py  cspell.json  debug_db.py  debug_service_startup.py  dev_utils.py  devtool  (+35 more)
.dev-library/: .zabob.dic  LICENSE.md  README.md  SIMPLIFICATION.md  devtool  pyproject.toml
.dev-library/configs/: .flake8  README.md  playwright.config.py  ruff-base.toml
.dev-library/docs-assets/: README.md
.dev-library/docs-assets/diagrams/: README.md
.dev-library/docs-assets/images/psd/: zabob-banner.psd  zabob.psd
.dev-library/docs-assets/templates/: README.md
.dev-library/skills/: fastapi-async-development.md  sqlite-fts-development.md  systematic-debugging.md  test-driven-development.md  web-security-patterns.md
.dev-library/templates/: README.md  devtool.py
.dev-library/test-fixtures/: README.md
.dev-library/test-fixtures/pytest/: database_fixtures.py
.dev-library/zabob/: __init__.py
.dev-library/zabob/tools/: __init__.py  libtools.py
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: base-images.yml  ci-cd.yml  ci.yml  docker-build.yml  dockerhub.yml  on_pull_request.yml  on_push.yml  on_release.yml  pypi.yml  release.yml
WORK/: README.md
docs/: BASE_IMAGES.md  CI_CD_DOCKER.md  DOCKER_BUILD.md  DOCKER_TESTING.md  INDEX_OPTIMIZATION.md  MCP_CONFIGURATION.md  SUBTREE-SYNC.md  UI_CONTROLS.md  USAGE_PATTERNS.md  VECTOR_SEARCH_PLAN.md  aliso-canyon-history.md  errata.md  graphs-in-computation.md  intellectual-lineage.md  la-oil-wells.md  mcp_dev_container_concept.py  playa-del-rey-gas-storage.md  scattergood-olympic-1989.md  scattergood-reference.md
docs/historical/: .net-history.dic  README.md  aliso-canyon-history.md  intellectual-lineage.md  la-oil-wells.md  net-memory.code-workspace  playa-del-rey-gas-storage.md  scattergood-olympic-1989.md  scattergood-reference.md
docs/historical/docs/: AUTHORSHIP.md  aliso-canyon-history.md  la-oil-wells.md  playa-del-rey-gas-storage.md
docs/historical/docs/images/: README.md
docs/images/: README.md
docs/images/psd/: zabob-banner.psd  zabob-faviicon.psd  zabob-holodeck.psd
memgraph/: __init__.py  __main__.py  __version__.py  backup.py  config.py  context_search.py  docker_mcp_client.py  embeddings.py  fastmcp_client.py  knowledge_live.py  launcher.py  mcp_client.py  mcp_protocol_client.py  mcp_service.py  real_mcp_client.py  server.py  service.py  service_logging.py  simple_mcp_bridge.py  sqlite_backend.py  stdio_mcp_client.py  stdio_service.py  subprocess_mcp_client.py  vector_sqlite.py  vector_store.py  web_service.py
memgraph/web/: client.js  graph.js  index.html  mcp-client.js  style.css
memgraph/web-src/: graph.js  mcp-client.js
skills/: fastapi-async-development.md
test-fixtures/: README.md
test-fixtures/pytest/: database_fixtures.py
tests/: README.md  conftest.py  test_client_integration.py  test_config.py  test_mcp_vector_search.py  test_observation_sorting.py  test_placeholder.py  test_search.py  test_search_nodes.py  test_search_or_logic.py  test_service_integration.py  test_ui_playwright.py  test_vector_search.py  test_web_service.py
