[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zabob-memgraph"
version = "0.1.0"
description = "Zabob Memgraph - Knowledge graph visualization and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "mcp>=1.9.3",
    # "fastmcp>=0.1.0",  # TODO: Add when available on PyPI
    "pydantic>=2.11.5",
    "jinja2>=3.1.6",
    "psutil>=6.1.0",
    "aiofiles>=24.1.0",
    "rich>=14.0.0",
    "requests>=2.32.4",
    "toml>=0.10.2",
    "fastmcp>=2.8.0",
]

[project.scripts]
zabob-memgraph = "main:main"
#zabob-memgraph-launcher = "zabob-memgraph-launcher:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memgraph*"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
]
ignore = [
    "UP036",
    ]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
