[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zabob-memgraph"
version = "0.1.0"
description = "Zabob Memgraph - Knowledge graph visualization and MCP server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn>=0.38.0",
    "mcp>=1.22",
    "fastmcp>=2.13.3",
    "pydantic>=2.12.5",
    "jinja2>=3.1.6",
    "psutil>=7.1.3",
    "aiofiles>=25.1.0",
    "rich>=14.2.0",
    "requests>=2.32.5",
    "toml>=0.10.2",
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "black>=25.12.0",
    "isort>=7.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.3.0",
    "anyio>=4.12.0",
]

[project.scripts]
zabob-memgraph = "memgraph.__main__:cli"
zabob-memgraph-server = "main:main"

[project.optional-dependencies]
# CI group: Only testing dependencies (no compiled deps like watchfiles)
ci = [
    "playwright>=1.49.1",
]

# Dev group: Everything for local development including hot reload
dev = [
    "playwright>=1.49.1",
    "watchfiles>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memgraph*"]

[tool.black]
line-length = 120
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.flake8]
max-line-length = 120

[tool.pylance]
pythonVersion = "3.13"
line-length = 120

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "I",   # isort
]
ignore = [
    "UP036",
    ]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[dependency-groups]
dev = [
    "playwright>=1.57.0",
    "pytest-playwright>=0.7.2",
]
